hphp/test/slow/type_structure/non-type-const.php.expectf

Fatal error: Non-existent type constant C::CNS in %s/non-type-const.php on line 8
